change "Hello, There!" to "Hello, World!"

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="greeting">
-	    Hello There!
+	    Hello, World!
     </div>
     <hr>
     <div class="content">
