adding second src for elie solution

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Le DOM playground</title>
     <link rel="stylesheet" href="main.css">
     <script src="app.js" ></script>
+    <!-- <script src="app_v2.js" ></script> -->
   </head>
   <body>
     <div id="greeting">
